--- a/p1012/src/main/webapp/login.html
+++ b/p1012/src/main/webapp/login.html
@@ -104,19 +104,19 @@
     <div id="container">
         <div id="content">
             <div style="margin-bottom: 7px"></div>
-            <form action="naver_index2.jsp">
+            <form action="doLogin.do">
                 <fieldset style="border: 0">
                     <div class="id_area">
                         <div class="input_row" id="id_area">
                             <span class="input_box">
-                                <input type="text" name="" id="uId" class="int" placeholder="아이디">
+                                <input type="text" name="id" id="id" class="int" placeholder="아이디">
                             </span>
                         </div>
                     </div>
                     <div class="pw_area">
                         <div class="input_row" id="pw_area">
                             <span class="input_box">
-                                <input type="text" name="" id="uPw" class="int" placeholder="비밀번호">
+                                <input type="text" name="pw" id="pw" class="int" placeholder="비밀번호">
                             </span>
                         </div>
                     </div>
