--- a/p1027/src/main/webapp/event/event.html
+++ b/p1027/src/main/webapp/event/event.html
@@ -215,10 +215,10 @@ $(document).ready(function() {
 							<!-- 반복 -->
 							<li>
 								<div class="img">
-									<a href="#"><img src="../images/img/sample_event.jpg" alt="진행중 이벤트" /></a>
+									<a href="./event_view.html?bid=1"><img src="../images/img/sample_event.jpg" alt="진행중 이벤트" /></a>
 								</div>
 								<div class="txt">
-									<div class="subject">까페모리 봄바람 커피한잔 30% 할인 이벤트!!까페모리 봄바람 커피한잔 30% 할인 이벤트!!</div>
+									<div class="subject">bid=1,까페모리 봄바람 커피한잔 30% 할인 이벤트!!까페모리 봄바람 커피한잔 30% 할인 이벤트!!</div>
 									<div class="day">이벤트 기간 : 2014-04-01 ~ 2014-04-29</div>
 								</div>
 							</li>
